logs/app.log
2021-07-31T07:59:05.244Z [error]: main - uncaughtException: Cannot read property 'get' of undefined
TypeError: Cannot read property 'get' of undefined
    at Object.<anonymous> (F:\Codes\Node Framework\libs\dbConnect\mysql\mysqlCon10.js:8:21)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Module.require (internal/modules/cjs/loader.js:1026:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (F:\Codes\Node Framework\app\admin-panel-api\1\model\GPS\getPackageDetailsModel.js:2:20)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
Saturday, July 31st, 2021, 2:26:14 PM [info]: main - Opening connection to MySql DB[object Object]
2021-07-31T08:27:03.612Z [error]: main - uncaughtException: result is not defined
ReferenceError: result is not defined
    at F:\Codes\Node Framework\app\api\1\model\addNewuserModel.js:7:18
    at Handshake.onConnect (F:\Codes\Node Framework\node_modules\mysql\lib\Pool.js:58:9)
    at Handshake.<anonymous> (F:\Codes\Node Framework\node_modules\mysql\lib\Connection.js:526:10)
    at Handshake._callback (F:\Codes\Node Framework\node_modules\mysql\lib\Connection.js:488:16)
    at Handshake.Sequence.end (F:\Codes\Node Framework\node_modules\mysql\lib\protocol\sequences\Sequence.js:83:24)
    at Handshake.ErrorPacket (F:\Codes\Node Framework\node_modules\mysql\lib\protocol\sequences\Handshake.js:125:8)
    at Protocol._parsePacket (F:\Codes\Node Framework\node_modules\mysql\lib\protocol\Protocol.js:291:23)
    at Parser._parsePacket (F:\Codes\Node Framework\node_modules\mysql\lib\protocol\Parser.js:433:10)
    at Parser.write (F:\Codes\Node Framework\node_modules\mysql\lib\protocol\Parser.js:43:10)
    at Protocol.write (F:\Codes\Node Framework\node_modules\mysql\lib\protocol\Protocol.js:38:16)
Saturday, July 31st, 2021, 2:27:28 PM [info]: main - Opening connection to MySql DB[object Object]
Saturday, July 31st, 2021, 2:35:59 PM [info]: main - Opening connection to MySql DB[object Object]
Saturday, July 31st, 2021, 2:43:31 PM [info]: main - Opening connection to MySql DB[object Object]
Tuesday, August 17th, 2021, 10:22:04 PM [info]: main - Opening connection to MySql DB[object Object]
2021-08-18T07:35:30.478Z [error]: main - uncaughtException: pg.createPool is not a function
TypeError: pg.createPool is not a function
    at Object.<anonymous> (F:\Codes\Node Framework\libs\dbConnect\mysql\mysqlCon10.js:21:28)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Module.require (internal/modules/cjs/loader.js:1026:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (F:\Codes\Node Framework\app\api\1\model\addNewuserModel.js:1:20)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
Wednesday, August 18th, 2021, 1:36:18 PM [info]: main - Opening connection to MySql DB[object Object]
2021-08-18T07:36:18.993Z [error]: main - uncaughtException: pg is not defined
ReferenceError: pg is not defined
    at Object.<anonymous> (F:\Codes\Node Framework\libs\dbConnect\mysql\mysqlCon10.js:41:14)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Module.require (internal/modules/cjs/loader.js:1026:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (F:\Codes\Node Framework\app\api\1\model\addNewuserModel.js:1:20)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
Wednesday, August 18th, 2021, 1:36:44 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 1:40:41 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 1:42:18 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 1:42:49 PM [info]: main - Opening connection to DB[object Object]
2021-08-18T07:42:49.624Z [error]: main - uncaughtException: pool is not defined
ReferenceError: pool is not defined
    at Object.<anonymous> (F:\Codes\Node Framework\libs\dbConnect\mysql\mysqlCon10.js:43:1)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Module.require (internal/modules/cjs/loader.js:1026:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (F:\Codes\Node Framework\app\api\1\model\addNewuserModel.js:1:20)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
Wednesday, August 18th, 2021, 1:43:11 PM [info]: main - Opening connection to DB[object Object]
2021-08-18T07:43:12.039Z [error]: main - uncaughtException: pool is not defined
ReferenceError: pool is not defined
    at F:\Codes\Node Framework\libs\dbConnect\mysql\mysqlCon10.js:45:5
    at Query.<anonymous> (F:\Codes\Node Framework\node_modules\pg-pool\index.js:389:18)
    at Query.handleReadyForQuery (F:\Codes\Node Framework\node_modules\pg\lib\query.js:138:12)
    at Client._handleReadyForQuery (F:\Codes\Node Framework\node_modules\pg\lib\client.js:290:19)
    at Connection.emit (events.js:315:20)
    at F:\Codes\Node Framework\node_modules\pg\lib\connection.js:114:12
    at Parser.parse (F:\Codes\Node Framework\node_modules\pg-protocol\dist\parser.js:40:17)
    at Socket.<anonymous> (F:\Codes\Node Framework\node_modules\pg-protocol\dist\index.js:11:42)
    at Socket.emit (events.js:315:20)
    at addChunk (_stream_readable.js:295:12)
Wednesday, August 18th, 2021, 1:43:33 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 1:44:42 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 1:58:18 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 1:58:47 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:06:41 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:07:02 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:07:30 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:08:01 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:08:39 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:09:08 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:13:17 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 2:13:58 PM [info]: main - Opening connection to DB[object Object]
Wednesday, August 18th, 2021, 3:30:33 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 3:32:04 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 4:33:30 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 4:40:13 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 4:47:57 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 4:50:49 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 4:51:25 PM [info]: main - Opening connection to MySql DB[object Object]
2021-08-18T10:51:26.136Z [error]: main - uncaughtException: Unexpected token 'var'
F:\Codes\Node Framework\common\middleware\authValidation.js:2
var secret = "TOP_SECRET",
^^^

SyntaxError: Unexpected token 'var'
    at wrapSafe (internal/modules/cjs/loader.js:1054:16)
    at Module._compile (internal/modules/cjs/loader.js:1102:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
    at Module.load (internal/modules/cjs/loader.js:986:32)
    at Function.Module._load (internal/modules/cjs/loader.js:879:14)
    at Module.require (internal/modules/cjs/loader.js:1026:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (F:\Codes\Node Framework\app\api\1\routes\api\rides.js:2:29)
    at Module._compile (internal/modules/cjs/loader.js:1138:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1158:10)
Wednesday, August 18th, 2021, 4:53:46 PM [info]: main - Opening connection to MySql DB[object Object]
Wednesday, August 18th, 2021, 4:56:43 PM [info]: main - Opening connection to MySql DB[object Object]
